parser.output
Grammar

    0 $accept: programa $end

    1 programa: declaraciones

    2 declaraciones: declaraciones declaracion
    3              | declaracion

    4 declaracion: STRUCT decl2

    5 $@1: ε

    6 $@2: ε

    7 $@3: ε

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    9 $@4: ε

   10 declaracion: tipo $@4 decl1

   11 $@5: ε

   12 $@6: ε

   13 decl2: LKEY $@5 body_struct RKEY ID $@6 PYC

   14 $@7: ε

   15 $@8: ε

   16 decl2: ID $@7 LKEY body_struct RKEY $@8 PYC

   17 body_struct: decl_locales

   18 decl1: lista_var PYC

   19 $@9: ε

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY

   21 tipo: INT
   22     | FLOAT
   23     | DOUBLE
   24     | CHAR

   25 lista_var: lista_var COMA ID
   26          | ID

   27 lista_args: args
   28           | ε

   29 args: args COMA arg
   30     | arg

   31 arg: tipo ID

   32 bloque_sentencias: sentencias
   33                  | ε

   34 decl_locales: decl_locales decl_local
   35             | decl_local

   36 $@10: ε

   37 decl_local: tipo $@10 lista_var PYC

   38 sentencias: sentencias sentencia
   39           | sentencia

   40 $@11: ε

   41 $@12: ε

   42 sentencia: IF LPAR expresion $@11 RPAR LKEY sentencias $@12 RKEY ELSE LKEY sentencias RKEY

   43 $@13: ε

   44 $@14: ε

   45 sentencia: WHILE $@13 LPAR expresion $@14 RPAR LKEY sentencias RKEY

   46 $@15: ε

   47 $@16: ε

   48 sentencia: DO $@15 LKEY sentencias RKEY WHILE LPAR expresion $@16 RPAR PYC
   49          | ID ASIG expresion PYC
   50          | ID NOT expresion PYC
   51          | PRINT LPAR expresion RPAR PYC
   52          | SCAN LPAR ID RPAR PYC
   53          | BREAK PYC

   54 expresion: expresion IGUAL expresion
   55          | expresion DIFF expresion
   56          | expresion AND expresion
   57          | expresion OR expresion
   58          | expresion MAYORQUE expresion
   59          | expresion MENORQUE expresion
   60          | expresion MAYORIGUAL expresion
   61          | expresion MENORIGUAL expresion
   62          | expresion MAS expresion
   63          | expresion MENOS expresion
   64          | expresion MUL expresion
   65          | expresion DIV expresion
   66          | LPAR expresion RPAR
   67          | NUMERO
   68          | CARACTER
   69          | ID
   70          | ID LPAR lista_params RPAR
   71          | ID PUNTO ID

   72 lista_params: params
   73             | ε

   74 params: params COMA param
   75       | param

   76 param: expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <std::string> (258) 8 13 16 20 25 26 31 49 50 52 69 70 71
    NUMERO <std::string> (259) 67
    CARACTER <std::string> (260) 68
    IF (261) 42
    ELSE (262) 42
    WHILE (263) 45 48
    DO (264) 48
    INT (265) 21
    FLOAT (266) 22
    DOUBLE (267) 23
    CHAR (268) 24
    VOID (269) 8
    RETURN (270) 20
    BREAK (271) 53
    LKEY (272) 8 13 16 20 42 45 48
    RKEY (273) 8 13 16 20 42 45 48
    PYC (274) 13 16 18 20 37 48 49 50 51 52 53
    COMA (275) 25 29 74
    PUNTO (276) 71
    PRINT (277) 51
    SCAN (278) 52
    STRUCT (279) 4
    ASIG (280) 49
    NOT (281) 50
    MAYORQUE (282) 58
    MENORQUE (283) 59
    MAYORIGUAL (284) 60
    MENORIGUAL (285) 61
    IGUAL (286) 54
    DIFF (287) 55
    AND (288) 56
    OR (289) 57
    MAS (290) 62
    MENOS (291) 63
    MUL (292) 64
    DIV (293) 65
    LPAR (294) 8 20 42 45 48 51 52 66 70
    RPAR (295) 8 20 42 45 48 51 52 66 70


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa (42)
        on left: 1
        on right: 0
    declaraciones (43)
        on left: 2 3
        on right: 1 2
    declaracion (44)
        on left: 4 8 10
        on right: 2 3
    $@1 (45)
        on left: 5
        on right: 8
    $@2 (46)
        on left: 6
        on right: 8
    $@3 (47)
        on left: 7
        on right: 8
    $@4 (48)
        on left: 9
        on right: 10
    decl2 (49)
        on left: 13 16
        on right: 4
    $@5 (50)
        on left: 11
        on right: 13
    $@6 (51)
        on left: 12
        on right: 13
    $@7 (52)
        on left: 14
        on right: 16
    $@8 (53)
        on left: 15
        on right: 16
    body_struct (54)
        on left: 17
        on right: 13 16
    decl1 (55)
        on left: 18 20
        on right: 10
    $@9 (56)
        on left: 19
        on right: 20
    tipo <int> (57)
        on left: 21 22 23 24
        on right: 10 31 37
    lista_var (58)
        on left: 25 26
        on right: 18 25 37
    lista_args <vector<int>> (59)
        on left: 27 28
        on right: 8 20
    args <vector<int>> (60)
        on left: 29 30
        on right: 27 29
    arg <int> (61)
        on left: 31
        on right: 29 30
    bloque_sentencias (62)
        on left: 32 33
        on right: 8 20
    decl_locales (63)
        on left: 34 35
        on right: 8 17 20 34
    decl_local (64)
        on left: 37
        on right: 34 35
    $@10 (65)
        on left: 36
        on right: 37
    sentencias (66)
        on left: 38 39
        on right: 32 38 42 45 48
    sentencia (67)
        on left: 42 45 48 49 50 51 52 53
        on right: 38 39
    $@11 (68)
        on left: 40
        on right: 42
    $@12 (69)
        on left: 41
        on right: 42
    $@13 (70)
        on left: 43
        on right: 45
    $@14 (71)
        on left: 44
        on right: 45
    $@15 (72)
        on left: 46
        on right: 48
    $@16 (73)
        on left: 47
        on right: 48
    expresion <Expresion> (74)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 20 42 45 48 49 50 51 54 55 56 57 58 59 60 61 62 63 64 65 66 76
    lista_params <vector<int>> (75)
        on left: 72 73
        on right: 70
    params <vector<int>> (76)
        on left: 74 75
        on right: 72 74
    param <int> (77)
        on left: 76
        on right: 74 75


State 0

    0 $accept: • programa $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    programa       go to state 7
    declaraciones  go to state 8
    declaracion    go to state 9
    tipo           go to state 10


State 1

   21 tipo: INT •

    $default  reduce using rule 21 (tipo)


State 2

   22 tipo: FLOAT •

    $default  reduce using rule 22 (tipo)


State 3

   23 tipo: DOUBLE •

    $default  reduce using rule 23 (tipo)


State 4

   24 tipo: CHAR •

    $default  reduce using rule 24 (tipo)


State 5

    8 declaracion: VOID • $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    $default  reduce using rule 5 ($@1)

    $@1  go to state 11


State 6

    4 declaracion: STRUCT • decl2

    ID    shift, and go to state 12
    LKEY  shift, and go to state 13

    decl2  go to state 14


State 7

    0 $accept: programa • $end

    $end  shift, and go to state 15


State 8

    1 programa: declaraciones •
    2 declaraciones: declaraciones • declaracion

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 1 (programa)

    declaracion  go to state 16
    tipo         go to state 10


State 9

    3 declaraciones: declaracion •

    $default  reduce using rule 3 (declaraciones)


State 10

   10 declaracion: tipo • $@4 decl1

    $default  reduce using rule 9 ($@4)

    $@4  go to state 17


State 11

    8 declaracion: VOID $@1 • ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    ID  shift, and go to state 18


State 12

   16 decl2: ID • $@7 LKEY body_struct RKEY $@8 PYC

    $default  reduce using rule 14 ($@7)

    $@7  go to state 19


State 13

   13 decl2: LKEY • $@5 body_struct RKEY ID $@6 PYC

    $default  reduce using rule 11 ($@5)

    $@5  go to state 20


State 14

    4 declaracion: STRUCT decl2 •

    $default  reduce using rule 4 (declaracion)


State 15

    0 $accept: programa $end •

    $default  accept


State 16

    2 declaraciones: declaraciones declaracion •

    $default  reduce using rule 2 (declaraciones)


State 17

   10 declaracion: tipo $@4 • decl1

    ID  shift, and go to state 21

    decl1      go to state 22
    lista_var  go to state 23


State 18

    8 declaracion: VOID $@1 ID • LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    LPAR  shift, and go to state 24


State 19

   16 decl2: ID $@7 • LKEY body_struct RKEY $@8 PYC

    LKEY  shift, and go to state 25


State 20

   13 decl2: LKEY $@5 • body_struct RKEY ID $@6 PYC

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    body_struct   go to state 26
    tipo          go to state 27
    decl_locales  go to state 28
    decl_local    go to state 29


State 21

   20 decl1: ID • $@9 LPAR lista_args RPAR LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY
   26 lista_var: ID •

    LPAR      reduce using rule 19 ($@9)
    $default  reduce using rule 26 (lista_var)

    $@9  go to state 30


State 22

   10 declaracion: tipo $@4 decl1 •

    $default  reduce using rule 10 (declaracion)


State 23

   18 decl1: lista_var • PYC
   25 lista_var: lista_var • COMA ID

    PYC   shift, and go to state 31
    COMA  shift, and go to state 32


State 24

    8 declaracion: VOID $@1 ID LPAR • $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    $default  reduce using rule 6 ($@2)

    $@2  go to state 33


State 25

   16 decl2: ID $@7 LKEY • body_struct RKEY $@8 PYC

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    body_struct   go to state 34
    tipo          go to state 27
    decl_locales  go to state 28
    decl_local    go to state 29


State 26

   13 decl2: LKEY $@5 body_struct • RKEY ID $@6 PYC

    RKEY  shift, and go to state 35


State 27

   37 decl_local: tipo • $@10 lista_var PYC

    $default  reduce using rule 36 ($@10)

    $@10  go to state 36


State 28

   17 body_struct: decl_locales •
   34 decl_locales: decl_locales • decl_local

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    $default  reduce using rule 17 (body_struct)

    tipo        go to state 27
    decl_local  go to state 37


State 29

   35 decl_locales: decl_local •

    $default  reduce using rule 35 (decl_locales)


State 30

   20 decl1: ID $@9 • LPAR lista_args RPAR LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY

    LPAR  shift, and go to state 38


State 31

   18 decl1: lista_var PYC •

    $default  reduce using rule 18 (decl1)


State 32

   25 lista_var: lista_var COMA • ID

    ID  shift, and go to state 39


State 33

    8 declaracion: VOID $@1 ID LPAR $@2 • lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    $default  reduce using rule 28 (lista_args)

    tipo        go to state 40
    lista_args  go to state 41
    args        go to state 42
    arg         go to state 43


State 34

   16 decl2: ID $@7 LKEY body_struct • RKEY $@8 PYC

    RKEY  shift, and go to state 44


State 35

   13 decl2: LKEY $@5 body_struct RKEY • ID $@6 PYC

    ID  shift, and go to state 45


State 36

   37 decl_local: tipo $@10 • lista_var PYC

    ID  shift, and go to state 46

    lista_var  go to state 47


State 37

   34 decl_locales: decl_locales decl_local •

    $default  reduce using rule 34 (decl_locales)


State 38

   20 decl1: ID $@9 LPAR • lista_args RPAR LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    $default  reduce using rule 28 (lista_args)

    tipo        go to state 40
    lista_args  go to state 48
    args        go to state 42
    arg         go to state 43


State 39

   25 lista_var: lista_var COMA ID •

    $default  reduce using rule 25 (lista_var)


State 40

   31 arg: tipo • ID

    ID  shift, and go to state 49


State 41

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args • RPAR LKEY decl_locales bloque_sentencias $@3 RKEY

    RPAR  shift, and go to state 50


State 42

   27 lista_args: args •
   29 args: args • COMA arg

    COMA  shift, and go to state 51

    $default  reduce using rule 27 (lista_args)


State 43

   30 args: arg •

    $default  reduce using rule 30 (args)


State 44

   16 decl2: ID $@7 LKEY body_struct RKEY • $@8 PYC

    $default  reduce using rule 15 ($@8)

    $@8  go to state 52


State 45

   13 decl2: LKEY $@5 body_struct RKEY ID • $@6 PYC

    $default  reduce using rule 12 ($@6)

    $@6  go to state 53


State 46

   26 lista_var: ID •

    $default  reduce using rule 26 (lista_var)


State 47

   25 lista_var: lista_var • COMA ID
   37 decl_local: tipo $@10 lista_var • PYC

    PYC   shift, and go to state 54
    COMA  shift, and go to state 32


State 48

   20 decl1: ID $@9 LPAR lista_args • RPAR LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY

    RPAR  shift, and go to state 55


State 49

   31 arg: tipo ID •

    $default  reduce using rule 31 (arg)


State 50

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR • LKEY decl_locales bloque_sentencias $@3 RKEY

    LKEY  shift, and go to state 56


State 51

   29 args: args COMA • arg

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    tipo  go to state 40
    arg   go to state 57


State 52

   16 decl2: ID $@7 LKEY body_struct RKEY $@8 • PYC

    PYC  shift, and go to state 58


State 53

   13 decl2: LKEY $@5 body_struct RKEY ID $@6 • PYC

    PYC  shift, and go to state 59


State 54

   37 decl_local: tipo $@10 lista_var PYC •

    $default  reduce using rule 37 (decl_local)


State 55

   20 decl1: ID $@9 LPAR lista_args RPAR • LKEY decl_locales bloque_sentencias RETURN expresion PYC RKEY

    LKEY  shift, and go to state 60


State 56

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY • decl_locales bloque_sentencias $@3 RKEY

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    tipo          go to state 27
    decl_locales  go to state 61
    decl_local    go to state 29


State 57

   29 args: args COMA arg •

    $default  reduce using rule 29 (args)


State 58

   16 decl2: ID $@7 LKEY body_struct RKEY $@8 PYC •

    $default  reduce using rule 16 (decl2)


State 59

   13 decl2: LKEY $@5 body_struct RKEY ID $@6 PYC •

    $default  reduce using rule 13 (decl2)


State 60

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY • decl_locales bloque_sentencias RETURN expresion PYC RKEY

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4

    tipo          go to state 27
    decl_locales  go to state 62
    decl_local    go to state 29


State 61

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales • bloque_sentencias $@3 RKEY
   34 decl_locales: decl_locales • decl_local

    ID      shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    DO      shift, and go to state 66
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4
    BREAK   shift, and go to state 67
    PRINT   shift, and go to state 68
    SCAN    shift, and go to state 69

    $default  reduce using rule 33 (bloque_sentencias)

    tipo               go to state 27
    bloque_sentencias  go to state 70
    decl_local         go to state 37
    sentencias         go to state 71
    sentencia          go to state 72


State 62

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY decl_locales • bloque_sentencias RETURN expresion PYC RKEY
   34 decl_locales: decl_locales • decl_local

    ID      shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    DO      shift, and go to state 66
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    DOUBLE  shift, and go to state 3
    CHAR    shift, and go to state 4
    BREAK   shift, and go to state 67
    PRINT   shift, and go to state 68
    SCAN    shift, and go to state 69

    $default  reduce using rule 33 (bloque_sentencias)

    tipo               go to state 27
    bloque_sentencias  go to state 73
    decl_local         go to state 37
    sentencias         go to state 71
    sentencia          go to state 72


State 63

   49 sentencia: ID • ASIG expresion PYC
   50          | ID • NOT expresion PYC

    ASIG  shift, and go to state 74
    NOT   shift, and go to state 75


State 64

   42 sentencia: IF • LPAR expresion $@11 RPAR LKEY sentencias $@12 RKEY ELSE LKEY sentencias RKEY

    LPAR  shift, and go to state 76


State 65

   45 sentencia: WHILE • $@13 LPAR expresion $@14 RPAR LKEY sentencias RKEY

    $default  reduce using rule 43 ($@13)

    $@13  go to state 77


State 66

   48 sentencia: DO • $@15 LKEY sentencias RKEY WHILE LPAR expresion $@16 RPAR PYC

    $default  reduce using rule 46 ($@15)

    $@15  go to state 78


State 67

   53 sentencia: BREAK • PYC

    PYC  shift, and go to state 79


State 68

   51 sentencia: PRINT • LPAR expresion RPAR PYC

    LPAR  shift, and go to state 80


State 69

   52 sentencia: SCAN • LPAR ID RPAR PYC

    LPAR  shift, and go to state 81


State 70

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias • $@3 RKEY

    $default  reduce using rule 7 ($@3)

    $@3  go to state 82


State 71

   32 bloque_sentencias: sentencias •
   38 sentencias: sentencias • sentencia

    ID     shift, and go to state 63
    IF     shift, and go to state 64
    WHILE  shift, and go to state 65
    DO     shift, and go to state 66
    BREAK  shift, and go to state 67
    PRINT  shift, and go to state 68
    SCAN   shift, and go to state 69

    $default  reduce using rule 32 (bloque_sentencias)

    sentencia  go to state 83


State 72

   39 sentencias: sentencia •

    $default  reduce using rule 39 (sentencias)


State 73

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY decl_locales bloque_sentencias • RETURN expresion PYC RKEY

    RETURN  shift, and go to state 84


State 74

   49 sentencia: ID ASIG • expresion PYC

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 89


State 75

   50 sentencia: ID NOT • expresion PYC

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 90


State 76

   42 sentencia: IF LPAR • expresion $@11 RPAR LKEY sentencias $@12 RKEY ELSE LKEY sentencias RKEY

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 91


State 77

   45 sentencia: WHILE $@13 • LPAR expresion $@14 RPAR LKEY sentencias RKEY

    LPAR  shift, and go to state 92


State 78

   48 sentencia: DO $@15 • LKEY sentencias RKEY WHILE LPAR expresion $@16 RPAR PYC

    LKEY  shift, and go to state 93


State 79

   53 sentencia: BREAK PYC •

    $default  reduce using rule 53 (sentencia)


State 80

   51 sentencia: PRINT LPAR • expresion RPAR PYC

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 94


State 81

   52 sentencia: SCAN LPAR • ID RPAR PYC

    ID  shift, and go to state 95


State 82

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 • RKEY

    RKEY  shift, and go to state 96


State 83

   38 sentencias: sentencias sentencia •

    $default  reduce using rule 38 (sentencias)


State 84

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY decl_locales bloque_sentencias RETURN • expresion PYC RKEY

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 97


State 85

   69 expresion: ID •
   70          | ID • LPAR lista_params RPAR
   71          | ID • PUNTO ID

    PUNTO  shift, and go to state 98
    LPAR   shift, and go to state 99

    $default  reduce using rule 69 (expresion)


State 86

   67 expresion: NUMERO •

    $default  reduce using rule 67 (expresion)


State 87

   68 expresion: CARACTER •

    $default  reduce using rule 68 (expresion)


State 88

   66 expresion: LPAR • expresion RPAR

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 100


State 89

   49 sentencia: ID ASIG expresion • PYC
   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion

    PYC         shift, and go to state 101
    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113


State 90

   50 sentencia: ID NOT expresion • PYC
   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion

    PYC         shift, and go to state 114
    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113


State 91

   42 sentencia: IF LPAR expresion • $@11 RPAR LKEY sentencias $@12 RKEY ELSE LKEY sentencias RKEY
   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion

    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113

    $default  reduce using rule 40 ($@11)

    $@11  go to state 115


State 92

   45 sentencia: WHILE $@13 LPAR • expresion $@14 RPAR LKEY sentencias RKEY

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 116


State 93

   48 sentencia: DO $@15 LKEY • sentencias RKEY WHILE LPAR expresion $@16 RPAR PYC

    ID     shift, and go to state 63
    IF     shift, and go to state 64
    WHILE  shift, and go to state 65
    DO     shift, and go to state 66
    BREAK  shift, and go to state 67
    PRINT  shift, and go to state 68
    SCAN   shift, and go to state 69

    sentencias  go to state 117
    sentencia   go to state 72


State 94

   51 sentencia: PRINT LPAR expresion • RPAR PYC
   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion

    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113
    RPAR        shift, and go to state 118


State 95

   52 sentencia: SCAN LPAR ID • RPAR PYC

    RPAR  shift, and go to state 119


State 96

    8 declaracion: VOID $@1 ID LPAR $@2 lista_args RPAR LKEY decl_locales bloque_sentencias $@3 RKEY •

    $default  reduce using rule 8 (declaracion)


State 97

   20 decl1: ID $@9 LPAR lista_args RPAR LKEY decl_locales bloque_sentencias RETURN expresion • PYC RKEY
   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion

    PYC         shift, and go to state 120
    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113


State 98

   71 expresion: ID PUNTO • ID

    ID  shift, and go to state 121


State 99

   70 expresion: ID LPAR • lista_params RPAR

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    $default  reduce using rule 73 (lista_params)

    expresion     go to state 122
    lista_params  go to state 123
    params        go to state 124
    param         go to state 125


State 100

   54 expresion: expresion • IGUAL expresion
   55          | expresion • DIFF expresion
   56          | expresion • AND expresion
   57          | expresion • OR expresion
   58          | expresion • MAYORQUE expresion
   59          | expresion • MENORQUE expresion
   60          | expresion • MAYORIGUAL expresion
   61          | expresion • MENORIGUAL expresion
   62          | expresion • MAS expresion
   63          | expresion • MENOS expresion
   64          | expresion • MUL expresion
   65          | expresion • DIV expresion
   66          | LPAR expresion • RPAR

    MAYORQUE    shift, and go to state 102
    MENORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    MENORIGUAL  shift, and go to state 105
    IGUAL       shift, and go to state 106
    DIFF        shift, and go to state 107
    AND         shift, and go to state 108
    OR          shift, and go to state 109
    MAS         shift, and go to state 110
    MENOS       shift, and go to state 111
    MUL         shift, and go to state 112
    DIV         shift, and go to state 113
    RPAR        shift, and go to state 126


State 101

   49 sentencia: ID ASIG expresion PYC •

    $default  reduce using rule 49 (sentencia)


State 102

   58 expresion: expresion MAYORQUE • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 127


State 103

   59 expresion: expresion MENORQUE • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 128


State 104

   60 expresion: expresion MAYORIGUAL • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 129


State 105

   61 expresion: expresion MENORIGUAL • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 130


State 106

   54 expresion: expresion IGUAL • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 131


State 107

   55 expresion: expresion DIFF • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 132


State 108

   56 expresion: expresion AND • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 133


State 109

   57 expresion: expresion OR • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 134


State 110

   62 expresion: expresion MAS • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 135


State 111

   63 expresion: expresion MENOS • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 136


State 112

   64 expresion: expresion MUL • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 137


State 113

   65 expresion: expresion DIV • expresion

    ID        shift, and go to state 85
    NUMERO    shift, and go to state 86
    CARACTER  shift, and go to state 87
    LPAR      shift, and go to state 88

    expresion  go to state 138


State 114

   50 sentencia: ID NOT expresion PYC •

    $default  reduce using rule 50 (sentencia)


State 115
